fix: align enter button in pin input

--- a/apps/client/src/common/components/protect-route/ProtectRoute.module.scss
+++ b/apps/client/src/common/components/protect-route/ProtectRoute.module.scss
@@ -18,6 +18,7 @@
   display: flex;
   gap: 0.125em;
   padding-block: 0.5em;
+  align-items: end;
 
   input {
     border-radius: 99px;
